[package]
name = "webx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.2.1"
cssparser = "0.33.0"
glib = "0.19.4"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
html5ever = "0.27.0"
html_parser = "0.7.0"
image = "0.25.1"
lazy_static = "1.4.0"
luaparse = "0.2.0"
markup5ever_rcdom = "0.3.0"
reqwest = { version = "0.12.3", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
