[package]
name = "webx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
glib = "0.19.4"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
html_parser = "0.7.0"
mlua = { version = "0.9.7", features = ["lua54"] }
reqwest = { version = "0.12.3", features = ["blocking"] }

[build-dependencies]
glib-build-tools = "0.19.0"
