[package]
name = "dingle"
version = "0.1.0"
edition = "2021"

[dependencies]
elipdotter = "0.3.5"
html_parser = "0.7.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
rocket = { version = "0.5.0", features= ["json"] }
