[package]
name = "webx-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower = { version = "0.4.13", features=["buffer", "limit"] }
tokio = { version = "1.38.0", features = ["full"] }
tower_governor = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mongodb = "2.8.2"
serde = "1.0.203"
rand = "0.8.5"
lazy_static = "1.4.0"
serde_json = "1.0.117"
async_once = "0.2.6"
futures-util = "0.3.30"
