[package]
name = "webx"
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
base64 = "0.22.1"
chrono = "0.4.38"
directories = "5.0.1"
glib = "0.19.4"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
html-escape = "0.2.13"
html_parser = "0.7.0"
lazy_static = "1.4.0"
mlua = { version = "0.9.7", features = ["luau", "macros", "async", "unstable", "serialize"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features=["macros"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }

[build-dependencies]
glib-build-tools = "0.19.0"

[profile.release]
strip = true
